<resources>
    <string name="app_name">StorageManagement</string>
    <string name="id">ID:</string>
    <string name="password">Password:</string>
    <string name="send">Send</string>
    <string name="add">add</string>
    <string name="view">view</string>
    <string name="view_storage">view storage</string>
    <string name="type">type</string>
    <string name="color">color</string>
    <string name="amount">amount</string>
    <string name="date">date</string>
    <string name="to">to</string>
    <string name="is_in">is it input?</string>
    <string name="location">storage</string>
    <string name="customer">customer</string>
    <string name="storage_number">storage number</string>
    <string name="warning_message">you did not fill the important field!</string>
    <string name="delete">delete</string>
    <string name="delete_message">Everyting in the database is deleted</string>
    <string name="add_message">The order was successfully added to database</string>
    <string name="progress_messgae">The feature is not complete. Sorry for the inconvenience.</string>
    <string name="add_view">+</string>
    <string name="one">1</string>
    <string name="input">input</string>
    <string name="output">output</string>
    <string name="write_down_type">write down type</string>
    <string name="size">size</string>
    <string name="check_order">check</string>
    <string name="cost">cost</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="type_incomplete">Please enter the type</string>
    <string name="customer_incomplete">Please fill the customer portion</string>
    <string name="validation_error">Please fill the important portion</string>
    <string name="source">source</string>
    <string name="default_storage">default</string>
    <string name="none">none</string>
    <string name="log_in_error">error occurred. Please try later</string>
    <string name="lacking">lacking:</string>
    <string name="show_recent">Show Recent</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="update">update</string>
    <string name ="date_fill_error">please fill in the date correctly</string>
    <string name= "customer_missing">please fill customer part correctly</string>
    <string name= "first_type_missin">please fill in first type part</string>
    <string name ="total_cost">total cost</string>
    <string name="calculate">Calculate</string>
</resources>
